# video-classification

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: end-to-end video classification.ipynb
src/: __init__.py  plots.py
src/modeling/: predict.py  train.py
video_classification/: dataset.py  features.py
video_classification/modeling/: predict.py  train.py
