[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "video_classification"
version = "0.0.1"
description = "This project aim to create a model from scratch to classify video for children"
authors = [
  { name = "Dang Thanh Dat" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.2"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["video_classification"]
force_sort_within_sections = true
